--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,44 @@
-.output {
-  border: 1px solid black;
+body{
+  background-color: rgba(127, 255, 212, 0.527);
+  color: rgb(156, 117, 17);
+  font-family:'Times New Roman', Times, serif;
 }
+
+h1 {
+  font-family:'Times New Roman', Times, serif;
+}
+
+p {
+  display: none;
+}
+#output {
+  display: none;
+  background-color: rgb(247, 236, 229);
+  color: black;
+  font-family:'Courier New', Courier, monospace;
+  border-top-left-radius: 37px 140px;
+  border-top-right-radius: 23px 130px;
+  border-bottom-left-radius: 110px 19px;
+  border-bottom-right-radius: 120px 24px;
+  position: relative;
+  border: solid 3px #6e7491;
+  padding: 40px 60px;
+  max-width: 800px;
+  width: 70%;
+  margin: 100px auto 0;
+  font-size: 17px;
+  line-height: 28px;
+  transform: rotate(-1deg);
+  box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
+  transition: all 0.13s ease-in;
+  }
+  
+#output:hover {
+    transition: (4.0s);
+    transform: translateY(-10px) rotate(10deg) scale(1.4);
+    box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
+  }
+  
+  #output:hover .border {
+    transform: translateY(4px) rotate(-10deg);
+  }
