add final styling
Co-authored-by: Brady Diamond <BradyDiamond@users.noreply.github.com>
Co-authored-by: DiamondsAndRust206 <DiamondsAndRust206@users.noreply.github.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,17 @@
 body{
   background-color: rgba(127, 255, 212, 0.527);
   color: rgb(156, 117, 17);
-  font-family:'Times New Roman', Times, serif;
 }
 
 h1 {
-  font-family:'Times New Roman', Times, serif;
+  margin-top: .5in;
+  font-family: 'Bungee Shade', cursive;
+  text-align: center;
 }
 
 p {
   display: none;
+  text-align: center;
 }
 #output {
   display: none;
